docs/.vuepress/styles/theme.styl
@require './config'
@require './nav-arrow'
@require './wrapper'
@require './toc'
@require './custom-block'

html, body
  padding 0
  margin 0
  height 100%

body
  font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
  -webkit-font-smoothing antialiased
  -moz-osx-font-smoothing grayscale
  font-size 0.875rem
  color $textColor

#app
  height 100%

.page
  padding-left $sidebarWidth
  padding-bottom 10rem

.navbar
  background-color $mainColor
  box-sizing border-box

.sidebar
  padding-bottom 204px;
  font-size 0.9375rem
  width $sidebarWidth
  background-color: $sidebarBgColor;
  position fixed
  z-index 10
  margin 0
  top $navbarHeight
  left 0
  bottom 0
  box-sizing border-box
  border-right 1px solid $borderColor
  overflow-y auto

.content:not(.custom)
  @extend $wrapper
  a:hover
    text-decoration underline

  p.demo
    padding 1rem 1.5rem
    border 1px solid #ddd
    border-radius 4px

  img
    max-width 100%

.content.custom
  padding 0
  margin 0

  img
    max-width 100%

a
  font-weight 500
  color $accentColor
  text-decoration none


p a code
  font-weight 400
  color $accentColor



kbd
  background #eee
  border solid 0.15rem #ddd
  border-bottom solid 0.25rem #ddd
  border-radius 0.15rem
  padding 0 0.15em

blockquote
  font-size 1.2rem
  color #999
  border-left .25rem solid #dfe2e5
  margin-left 0
  padding-left 1rem

ul
  padding-left 1.2em

ol
  padding-left 1.2em

strong
  font-weight 600

h1, h2, h3, h4, h5, h6
  line-height 1.25
  font-weight: normal
  color: $headerColor

  .content:not(.custom) > &
    margin-bottom 0

    &:first-child
      margin-bottom 1rem

      + p, + pre, + .custom-block
        margin-top 2rem

  &:hover .header-anchor
    opacity: 1

h1, h2, h3, h4, h5, h6
  margin-top 2.4rem

  &:before
    display: block;
    content: " ";
    margin-top: -6rem;
    height: 6rem;
    visibility: hidden;
    pointer-events: none;

h1
  font-size 2.14rem

h2
  font-size 1.28rem
  padding-bottom .3rem

h3
  font-size 1.14rem

h4
  font-size 1.05rem

a.header-anchor
  font-size 0.85em
  float left
  padding-right 0.23em
  margin-top 0.125em

  &:hover
    text-decoration none

code, kbd, .line-number
  font-family source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace

p, ul, ol
  line-height 1.7

hr
  border 0
  border-top 1px solid $borderColor

table
  border-collapse collapse
  margin 1rem 0
  display: block
  overflow-x: auto

tr
  border-top 1px solid #dfe2e5

  &:nth-child(2n)
    background-color #f6f8fa

th, td
  border 1px solid #dfe2e5
  padding .6em 1em

.custom-layout
  padding-top $navbarHeight

.theme-container
  min-height 100%
  display: flex;
  flex-direction column
  position relative

  &.sidebar-open
  &.no-navbar
    .content:not(.custom) > h1, h2, h3, h4, h5, h6
      margin-top 1.5rem
      padding-top 0

    .sidebar
      top 0

    .custom-layout
      padding-top 0

.language-text
  border-radius 6px
  font-size 12px

:not(.language-text) > code
  color: #1f3f5b
  padding: 0.25rem 0.5rem
  margin: 0
  font-size: .85em
  background-color: rgba(27,31,35,.05)
  border-radius: 3px

badge[type="warning"]
  display: inline-block
  padding: 0.2em 0.5em;
  border-radius: 3px;
  font-weight: bold;
  background-color: #FFD42A;
  color: black;
  font-size: 12px;
  margin-left: 0.5em;

  &:before
    content: attr(text);

badge[type="info"]
  display: inline-block
  padding: 0.2em 0.5em;
  border-radius: 3px;
  font-weight: bold;
  background-color: #48AE41;
  color: white;
  font-size: 12px;
  margin-left: 0.5em;

  &:before
    content: attr(text);

badge[type="danger"]
  display: inline-block
  padding: 0.2em 0.5em;
  border-radius: 3px;
  font-weight: bold;
  background-color: #CA2029;
  color: white;
  font-size: 12px;
  margin-left: 0.5em;

  &:before
    content: attr(text);

// Global copy button for code blocks
.global-copy-btn
  position absolute
  top 0.5rem
  right 0.5rem
  background none
  border none
  cursor pointer
  padding 0.2rem
  z-index 10
  line-height 0
  svg
    fill #ccc
    width 20px
    height 20px
    transition fill 0.3s
  img
    width 20px
    height 20px
    opacity 0.6
    transition opacity 0.3s

  &:hover svg
    fill #1994f9
  &:hover img
    opacity 1

// Reserve a gutter on the right of long code lines so they don't run under
// the copy button, and fade the trailing edge into the block background so
// truncated content is visually obvious. Users can scroll horizontally to read it.
//
// Gap is enforced by a filler on <code>::after rather than padding-right on
// <pre>, because WebKit does not include padding-right in the scrollable
// area, which leaves the trailing characters under the button at scroll-end.
div[class*="language-"]
  position relative

  > pre
    scrollbar-width thin                   // Firefox
    scrollbar-color #aaa transparent       // Firefox

  > pre > code::after
    content ''
    display inline-block
    width 4.5rem

  > pre::-webkit-scrollbar
    height 8px

  > pre::-webkit-scrollbar-track
    background transparent

  > pre::-webkit-scrollbar-thumb
    background-color #aaa
    border-radius 4px

  > pre::-webkit-scrollbar-thumb:hover
    background-color #ccc

.code-fade-mask
  position absolute
  top 0
  right 0
  bottom 14px                              // keep scrollbar fully visible
  width 90px
  pointer-events none
  background linear-gradient(to right, rgba(40, 44, 52, 0) 0%, var(--code-bg-color, #282c34) 55%)
  z-index 5
  border-top-right-radius 6px
  opacity 1
  transition opacity 0.15s ease

div[class*="language-"].hide-fade .code-fade-mask
  opacity 0

@media (max-width: $mobileBreakpoint)
  .content:not(.custom)
    width 100%
    margin 0

    & > h1:first-child
      margin 0
  a.header-anchor
    font-size 0 !important

